# nodes-editor-b

./: .gitignore  README.md  logs.txt  pyproject.toml
nodes_editor/: database_test.py  main.py
tests/: test_nodes_editor.py
