[tool.poetry]
name = "nodes-editor"
version = "0.1.0"
description = ""
authors = ["Connie <conniecanelon97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
firebase-admin = "^5.2.0"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
